--- a/app/src/main/res/layout/item_fruit.xml
+++ b/app/src/main/res/layout/item_fruit.xml
@@ -4,7 +4,8 @@
     android:layout_height="160dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
-    cardview:cardCornerRadius="4dp">
+    cardview:cardCornerRadius="4dp"
+    android:id="@+id/cardFruit">
 
     <LinearLayout
         android:layout_width="match_parent"
