--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="btnstCancel">#ffffff</color>
     <color name="tvBill">#000000</color>
     <color name="tvPrice">#ff0000</color>
+    <color name="tvtitle">#000000</color>
 </resources>
