--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -172,8 +172,8 @@
         <Button
             android:id="@+id/btnUpdate"
             style="?android:attr/borderlessButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="40dp"
             android:background="@color/btnAdd"
             android:elevation="10dp"
             android:text="@string/btnUpdate"
@@ -183,8 +183,8 @@
         <Button
             android:id="@+id/btnCancelUpdate"
             style="?android:attr/borderlessButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="30dp"
             android:background="@color/btnCancel"
             android:elevation="10dp"
